--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "jquery": "^3.4.1",
     "nanoid": "^2.1.11",
     "prop-types": "^15.7.2",
+    "random-words": "^1.1.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-toast-notifications": "^2.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "unique-names-generator": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
