--- a/package.json
+++ b/package.json
@@ -3,24 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.3.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "nanoid": "^2.1.11",
     "prop-types": "^15.7.2",
-    "random-words": "^1.1.0",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "random-words": "^1.1.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "unique-names-generator": "^4.2.0"
   },
   "scripts": {
@@ -46,8 +48,8 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0"
